--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         header {
             text-align: center;
             padding: 20px;
-            background-color: #2c3e50;
+            background-color:  #171a18;
             color: white;
         }
 
