--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         }
 
         .review {
-            background-color: #fff;
+            background-color:  #171a18;
             border: 1px solid #ddd;
             padding: 20px;
             margin: 10px 0;
