--- a/index.html
+++ b/index.html
@@ -53,15 +53,16 @@
         }
 
         .review {
-            background-color:  #171a18;
-            border: 1px solid #ddd;
-            padding: 20px;
-            margin: 10px 0;
-            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-            border-radius: 5px;
-            position: relative;
-            min-width: 200px;
-        }
+    background-color: #000;  
+    color: white;           
+    border: 1px solid #ddd;
+    padding: 20px;
+    margin: 10px 0;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+    border-radius: 5px;
+    position: relative;
+    min-width: 200px;
+}
 
         .review .author {
             position: absolute;
