--- a/index.html
+++ b/index.html
@@ -102,11 +102,11 @@
     <div class="reviews">
         <div class="review">
             <p>"This service is fantastic! My bot works perfectly, and the support is great!"</p>
-            <span class="author">- John Doe</span>
+            <span class="author">- Chiener12</span>
         </div>
         <div class="review">
             <p>"I love how easy it was to get my server set up, and the bot is top-notch!"</p>
-            <span class="author">- Jane Smith</span>
+            <span class="author">- AlexPlayzyt</span>
         </div>
         <div class="review">
             <p>"A smooth experience from start to finish! Highly recommend it for anyone looking for a Discord bot."</p>
