--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 <div class="reviews-container">
     <div class="reviews">
         <div class="review">
-            <p>"This service is fantastic! My bot works perfectly, and the support is great!"</p>
+            <p>"mrsalt has lowkey went above and beyond with his effort in his creations, not only did he completely rework my server but also developed a very cool custom bot. the bot works amazingly you can really tell hes put lots of time and effort into his work. i would recommend his work to anyone"</p>
             <span class="author">- Chiener12</span>
         </div>
         <div class="review">
