--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 </header>
 
 <div class="container">
-    <a href="YOUR_GOOGLE_FORM_URL_FOR_BOTS" class="btn">Create Discord Bot</a>
+    <a href="https://docs.google.com/forms/d/e/1FAIpQLScKBQPKmDkHjM0Q0XAkkhNd_uI7Pc6821X0FjA5IT76LWMUuA/viewform?usp=header" class="btn">Create Discord Bot</a>
     
     <a href="YOUR_GOOGLE_FORM_URL_FOR_SERVER" class="btn">Create Custom Server</a>
     
