--- a/index.html
+++ b/index.html
@@ -109,8 +109,8 @@
             <span class="author">- AlexPlayzyt</span>
         </div>
         <div class="review">
-            <p>"A smooth experience from start to finish! Highly recommend it for anyone looking for a Discord bot."</p>
-            <span class="author">- Mark Johnson</span>
+            <p>" I think this bot is a 10/10 bot. It has everything that anyone could ask for in a bot. It has all the commands someone wants, music. Everything!! Want a bot that has all of that? Join the Rockstar Server!"</p>
+            <span class="author">- Xv c0nk1n</span>
         </div>
     </div>
 </div>
